Prevent page jumping up & down

--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -1,5 +1,4 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -8,11 +7,11 @@
 }
 
 .main {
+  min-height: 100vh;
   padding: 1.5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
